[editor] correct items alignment

--- a/bin/editor/style.css
+++ b/bin/editor/style.css
@@ -41,6 +41,8 @@ menu {
     display: grid;
     flex: 0.85;
     padding: 1em;
+    justify-content: space-evenly;
+    align-content: space-evenly;
 }
 
 #fixed-content {
